--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="icon" href="preview.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="main.css">
-<link rel="stylesheet" href="overview.css">
-    <link rel="stylesheet" href="slider.css">
+    <link rel="stylesheet" href="/index/navbar.css">
+    <link rel="stylesheet" href="/index/main.css">
+<link rel="stylesheet" href="/index/overview.css">
+    <link rel="stylesheet" href="/index/slider.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded" />
-    <script src="script.js" defer></script>
+    <script src="/index/script.js" defer></script>
 
  <link rel="stylesheet" href="appointment.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&amp;display=swap" rel="stylesheet"/>
@@ -54,7 +54,7 @@
     
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav ms-auto">
-                                <li class="nav-item"><a class="nav-link active" href="bbmh.html">Home</a></li>
+                                <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" role="button" data-bs-toggle="dropdown">About Us</a>
                                     <ul class="dropdown-menu">
@@ -79,7 +79,7 @@
                             </ul>
                         </div>
                         <div class="icon" style="float: right;">
-                            <a href="#"><img src="logo1.png" alt="Logo"></a>
+                            <a href="#"><img src="/index/logo1.png" alt="Logo"></a>
                         </div>
                     </div>
                   
