--- a/index/index.html
+++ b/index/index.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="overview.css">
     <link rel="stylesheet" href="slider.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded" />
-    <script src="/index/script.js" defer></script>
+    <script src="script.js" defer></script>
 
  <link rel="stylesheet" href="appointment.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&amp;display=swap" rel="stylesheet"/>
