--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             </ul>
                         </div>
                         <div class="icon" style="float: right;">
-                            <a href="#"><img src="/index/logo1.png" alt="Logo"></a>
+                            <a href="#"><img src="logo1.png" alt="Logo"></a>
                         </div>
                     </div>
                   
